[gd_scene load_steps=12 format=3 uid="uid://nvxl21de0npd"]

[ext_resource type="Script" path="res://Main Game/main.gd" id="1_iurfd"]
[ext_resource type="Texture2D" uid="uid://dinrjagr3thwi" path="res://icon.svg" id="2_dxeig"]
[ext_resource type="Texture2D" uid="uid://bqid6aphupvd0" path="res://Main Game/Animations/early_0000.png" id="3_jx4yq"]
[ext_resource type="AudioStream" uid="uid://bea4o5tygudbg" path="res://Main Game/Win.wav" id="3_lh262"]
[ext_resource type="Texture2D" uid="uid://cx4r80b57knsl" path="res://Main Game/Animations/early_0006.png" id="4_aynhj"]
[ext_resource type="AudioStream" uid="uid://povmescxriqe" path="res://Main Game/Neutral.wav" id="4_y8qse"]
[ext_resource type="Texture2D" uid="uid://ds74rsivfieh0" path="res://Main Game/Animations/early_0012.png" id="5_dctj5"]
[ext_resource type="AudioStream" uid="uid://cunyktxspjqvs" path="res://Main Game/Lose.wav" id="5_t5hjq"]
[ext_resource type="Texture2D" uid="uid://bfg82j2lfcole" path="res://Main Game/Animations/early_0018.png" id="6_uc7d1"]
[ext_resource type="AudioStream" uid="uid://b4d2ldu4k31h4" path="res://Main Game/SpeedUp.wav" id="10_8ej0p"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vdf6n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_dctj5")
}, {
"duration": 1.0,
"texture": ExtResource("6_uc7d1")
}, {
"duration": 1.0,
"texture": ExtResource("3_jx4yq")
}, {
"duration": 1.0,
"texture": ExtResource("4_aynhj")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[node name="Main" type="Node" node_paths=PackedStringArray("countdown_timer", "intermission_music_timer", "speed_up_music_timer", "countdown_label", "p1_lives_label", "p2_lives_label", "round_count_label", "win_music", "neutral_music", "lose_music", "speed_up_music", "background_animation")]
script = ExtResource("1_iurfd")
countdown_timer = NodePath("CountdownTimer")
intermission_music_timer = NodePath("IntermissionMusicTimer")
speed_up_music_timer = NodePath("SpeedUpMusicTimer")
countdown_label = NodePath("CanvasLayer/Control/CountdownLabel")
p1_lives_label = NodePath("CanvasLayer/Control/P1Lives")
p2_lives_label = NodePath("CanvasLayer/Control/P2Lives")
round_count_label = NodePath("CanvasLayer/Control/RoundCount")
win_music = NodePath("Win")
neutral_music = NodePath("Neutral")
lose_music = NodePath("Lose")
speed_up_music = NodePath("SpeedUp")
background_animation = NodePath("CanvasLayer/Background")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(960, 540)
scale = Vector2(5, 5)
texture = ExtResource("2_dxeig")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(1920, 540)
scale = Vector2(5, 5)
texture = ExtResource("2_dxeig")

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(0, 540)
scale = Vector2(5, 5)
texture = ExtResource("2_dxeig")

[node name="Background" type="AnimatedSprite2D" parent="CanvasLayer"]
sprite_frames = SubResource("SpriteFrames_vdf6n")
offset = Vector2(960, 540)

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.0
offset_right = 49.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Intermission"

[node name="CountdownLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_bottom = 400.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="P1Lives" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="P2Lives" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1880.0
offset_right = 1920.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="RoundCount" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 460.0
offset_right = 20.0
offset_bottom = 483.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="SpeedUpMusicTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="IntermissionMusicTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Neutral" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_y8qse")

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lh262")

[node name="Lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_t5hjq")

[node name="SpeedUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_8ej0p")

[connection signal="timeout" from="SpeedUpMusicTimer" to="." method="_on_speed_up_music_timer_timeout"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
[connection signal="timeout" from="IntermissionMusicTimer" to="." method="_on_intermission_music_timer_timeout"]
